--- a/hw0.ipynb
+++ b/hw0.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "### Basic notebook setup\n",
     "\n",
-    "This assignment has the format that all your later assignments will use, namely using a Goggle Colab notebook (you can also download it as use it as a local Jupyter notebook) to implement functions.  You will then test your implementations, first locally and then by submitting to the autograder.\n",
+    "This assignment has the format that all your later assignments will use, namely using a Google Colab notebook (you can also download it and use it as a local Jupyter notebook) to implement functions.  You will then test your implementations, first locally and then by submitting to the autograder.\n",
     "\n",
     "To begin, you should first **make a copy of this notebook** by selecting \"Save a copy in Drive\" from the file menu.  This step is very important, as otherwise Colab will try to make changes directly in the GitHub repo, and none of your changes will be saved.  You should then run the following code cell to install and download all the necessary packages needed for this assignment."
    ]
@@ -56,7 +56,7 @@
     "\n",
     "After you have set up your mugrade account and enrolled in the class, you should see a page for the course and the available assignments.  There is also a \"Show API Key\" button at the top of the page.  To submit assignments, copy this key and enter it into the cell of the notebook.\n",
     "\n",
-    "[Note: Please don't share your API key with others.  If any of you are (properly) horrified at the idea of storing an API key in the plain text of a notebook, you're welcome to add a `MUGRADE_KEY` environmental variable using any technique that will properly set the environment of the notebook.  For simplicity, and because you can't do much other than submit assignments with these keys, we're taking the simple (insecure) approach are just storing it in the notebook.]"
+    "[Note: Please don't share your API key with others.  If any of you are (properly) horrified at the idea of storing an API key in the plain text of a notebook, you're welcome to add a `MUGRADE_KEY` environmental variable using any technique that will properly set the environment of the notebook.  For simplicity, and because you can't do much other than submit assignments with these keys, we're taking the simple (insecure) approach and just storing it in the notebook.]"
    ]
   },
   {
@@ -115,16 +115,16 @@
    "source": [
     "In addition to the function definition itself there is one important element to note: notice the `@mugrade.local_tests` line that's written above the function.  This is known as a Python _function decorator_, and while you definitely don't need to know how to decorators _work_ for this course, you'll have to use two simple such decorators to test and submit your code in mugrade.\n",
     "\n",
-    "First, when you execute the cell with one of your hw assignment functions prefaced by `@mugrade.local_tests`, this will make the notebook run the defined _unit tests_ for this function to check it's correctness.  You can take a look at these unit tests in the `hw0_tests.py` function, which is downloaded automatically when you run the first cell in the notebook (you should not edit this file at all).  In that file, there is a function `test_add` that contains the following code to check correctness of the add function you just implemented:\n",
+    "First, when you execute the cell with one of your hw assignment functions prefaced by `@mugrade.local_tests`, this will make the notebook run the defined _unit tests_ for this function to check its correctness.  You can take a look at these unit tests in the `hw0_tests.py` function, which is downloaded automatically when you run the first cell in the notebook (you should not edit this file at all).  In that file, there is a function `test_add` that contains the following code to check correctness of the add function you just implemented:\n",
     "```python\n",
     "def test_add(add):\n",
     "    assert(add(5,6) == 11)\n",
     "    assert(add(2.1,2.3) == 4.4)\n",
     "    assert(isinstance(add(4,2.1), float))\n",
     "```\n",
-    "When you preface a function with `@mugrade.local_tests`, it will automatically run this test function, will will throw an `AssertionError` if any of the test cases fail.  You can use these local tests to help you debug your implementation, until it passes all the tests.  Note that passing the local test cases definitely doesn't guarantee correctness of the function, but it should hopefully give you some guidance in your implementation.\n",
+    "When you preface a function with `@mugrade.local_tests`, it will automatically run this test function, which will throw an `AssertionError` if any of the test cases fail.  You can use these local tests to help you debug your implementation, until it passes all the tests.  Note that passing the local test cases definitely doesn't guarantee correctness of the function, but it should hopefully give you some guidance in your implementation.\n",
     "\n",
-    "_After_ you pass all the local tests succesfully, you should submit your solution to mugrade.  You can do this my simply changing the line `mugrade.local_tests` to `mugrade.submit_tests`, like in the solution below (just for this question we are providing it explicitly, but in general you'd edit the code above directly)."
+    "_After_ you pass all the local tests successfully, you should submit your solution to mugrade.  You can do this my simply changing the line `mugrade.local_tests` to `mugrade.submit_tests`, like in the solution below (just for this question we are providing it explicitly, but in general you'd edit the code above directly)."
    ]
   },
   {
@@ -160,7 +160,7 @@
     "\n",
     "**For the CMU course only (not needed for online course):** After you have submitted _all_ the assignments for the course, you should additionally upload the notebook itself: download the .ipynb notebook from Colab, and upload it to mugrade using the \"Upload Code\" link at the bottom of the page assignment page.\n",
     "\n",
-    "[Note: for those who want a bit more information about how mugrade works, and how it differs from other autograding systems, we'll provide a bit of info here, but understanding this is not required in anyway way for the course.  Most autograding systems work by uploading your code and running it on the grading server; this ensures that your code runs independently and functions as desired, but has the notable downside that, for complex assignments, it can be difficult to ensure that the environment of the autograder is sufficiently similar to your own environment.  Countless hours have been wasted by students trying to trace the exact way in which the autograding environment differs from their own.  This is especially a problem for machine learning assignments where GPUs are required to run the code, and we know of very few systems that handle this setup in a seamless fashion.\n",
+    "[Note: for those who want a bit more information about how mugrade works, and how it differs from other autograding systems, we'll provide a bit of info here, but understanding this is not required in any way for the course.  Most autograding systems work by uploading your code and running it on the grading server; this ensures that your code runs independently and functions as desired, but has the notable downside that, for complex assignments, it can be difficult to ensure that the environment of the autograder is sufficiently similar to your own environment.  Countless hours have been wasted by students trying to trace the exact way in which the autograding environment differs from their own.  This is especially a problem for machine learning assignments where GPUs are required to run the code, and we know of very few systems that handle this setup in a seamless fashion.\n",
     "\n",
     "This has led us to develop mugrade, which takes the different philosophy, runs all the autograding code _on your local system_ (or on Colab), and then just sends the _answer_ to mugrade to check against a reference solution.  The upside is that we can support large courses with relatively little overhead.  The downside is that it does allow cheating of some type: you absolutely could compute the solutions manually for each mugrade test case and then submit those answers to get full points.  And this would almost certainly be more time-consuming than just solving the problem to begin with.  So in a world where most assignments can be solved by AI anyway, it seems a very reasonable trade-off to give a bit more control to students of their coding environment, at the cost of possibly introducing slightly more ability to game the system.  This is why, as a final measure, we ask for all students to upload a copy of their assignment, so TA's can check it as needed.]"
    ]
@@ -301,14 +301,14 @@
    "id": "ea39a99c",
    "metadata": {},
    "source": [
-    "#### Problem 3a: Polynomial additiona\n",
+    "#### Problem 3a: Polynomial addition\n",
     "\n",
     "Write the code to add together two polynomials.  Adding polynomials just involves adding the respective coefficients of the same degree.  For example, if you had two polynomials\n",
     "$$p_1(x) = 3x^3 + 4x^2 + 3, \\quad p_2(x) = x^2 + 5x + 5$$\n",
     "then\n",
     "$$p_1(x) + p_2(x) = 3x^3 + 4x^2 + 5x + 8.$$\n",
     "\n",
-    "Implement this logic in the function below.  Note that the \"only\" thing that's required to implement this is to construct a new set off polynomial coefficients corresponding to the addition, and return a new polynomial constructed from these coefficients."
+    "Implement this logic in the function below.  Note that the \"only\" thing that's required to implement this is to construct a new set of polynomial coefficients corresponding to the addition, and return a new polynomial constructed from these coefficients."
    ]
   },
   {
@@ -397,7 +397,7 @@
     "$$p(x) = 4x^3 + 3x + x$$\n",
     "then the derivative of $p(x)$ with respect to $x$, which we denote as $p'(x)$, is given by\n",
     "$$p'(x) = 12x^2 + 3$$\n",
-    "where in general the derivative of any term $c x^n$ is given by $ncx^{n-1}$ and the of any constant term $c$ is zero.\n",
+    "where in general the derivative of any term $c x^n$ is given by $ncx^{n-1}$ and the derivative of any constant term $c$ is zero.\n",
     "\n",
     "Implement this logic in the function below."
    ]
