fix: mugrade.submit -> mugrade.submit_tests

--- a/hw0.ipynb
+++ b/hw0.ipynb
@@ -176,7 +176,7 @@
     "\n",
     "Using this pseudocode as a reference point (but note that you _don't_ have to follow it exactly), plus the function signature below (which you _do_ need to follow exactly), implement a method for computing primes using this method.  Note that even though the algorithm computes a binary array of which numbers are prime, the function as defined below needs to return a list of just the prime numbers, so you'll need to convert to that format.\n",
     "\n",
-    "For this function, you'll want to first run the `@mugrade.local_tests` test cases, then change this to `@mugrade.submit` once you have finished and debugged your implementation."
+    "For this function, you'll want to first run the `@mugrade.local_tests` test cases, then change this to `@mugrade.submit_tests` once you have finished and debugged your implementation."
    ]
   },
   {
