fix: added note for in-place operations

--- a/hw0.ipynb
+++ b/hw0.ipynb
@@ -298,6 +298,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "164a0896",
+   "metadata": {},
+   "source": [
+    "For this assignmentm always return a new `Polynomial` object rather than modifying either of the input objects in-place."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ea39a99c",
    "metadata": {},
    "source": [
